fixed pagination wrapper on tablet

--- a/src/pages/Catalog/Catalog.module.scss
+++ b/src/pages/Catalog/Catalog.module.scss
@@ -46,7 +46,7 @@
     grid-column: 1 / -1;
 
     @include on-tablet {
-      grid-column: 5 / 11;
+      grid-column: 4 / 10;
     }
 
     @include on-desktop {
